@@ -1,3 +1,7 @@
+2002-12-01  Bill Bumgarner  <bbum@codefab.com>
+	* cleaned up nsobject unittests slightly [had cruft from nsarray]
+	* added NSAutoreleasePool test
+
 2002-11-27  Bill Bumgarner  <bbum@codefab.com>
 	* make_distrib.py automatically removes CVS directories and
 	.DS_Store files from tree before packaging.
